Cleaned up the show listing and add listing pages. Modified the user page so that reviews do not spill out of content area. Will look at search panel now for small issue with landlord and apt building info when dropdown action occurs.

--- a/public/stylesheets/listingForm.css
+++ b/public/stylesheets/listingForm.css
@@ -17,12 +17,6 @@
 	display: inline;
 }
 
-#NewListingForm h2
-{
-	margin-top: 0px;
-	font-style: italic;
-}
-
 #UpdateLinks
 {
 	display: inline;
@@ -51,87 +45,30 @@
 	color: #03899C;
 }
 
-#ListingForm_View_Bar
+#ColumnOne, #ColumnTwo
 {
-	border: 0;
-	background-color: #eeeeee;
-	height: 5px;
-}
-
-#NewListingForm
-{
-	height: 600px;
-}
-
-#ColumnOne
-{
-	display: inline;
 	float: left;
-	width: 465px;
-	margin-top: 15px;
+	width: 475px;
+	margin-top: 5px;
+	margin-bottom: 15px;
 }
 
-#ColumnTwo
-{
-	display: inline;
-	float: right;
-	width: 465px;
-	margin-top: 15px;
-}
-
-#NewLocation, #NewPrice, #NewType, #NewResDetails, #NewLeaseDetails,
-#NewUtils, #NewAccommodations, #NewRestrictions, #NewLandlordInfo
-{
-	display: block;
-	border: 1px solid;
-	border-radius: 15px;
+.list-info input {
+	border: none;
+	border-radius: 5px;
 	padding: 5px;
-	margin: 15px;
 }
 
-#NewLocation, #NewResDetails, #NewLeaseDetails
-{
-	-moz-column-count: 3;
-	-webkit-column-count: 3;
-	column-count: 3;
-}
-
-#NewType, #NewUtils, #NewAccommodations, #NewRestrictions
-{
-	-moz-column-count: 2;
-	-webkit-column-count: 2;
-	column-count: 2;
-}
-
-#NewLocation input, #NewSquareFeet input
-{
-	width: 100px;
-}
-
-#NewPrice input
-{
-	width: 150px;
-}
-
-#NoEdit_NewBedrooms input, #NoEdit_NewBathrooms input
-{
-	width: 30px;
-}
-
-#Recaptcha
-{
+#show-listing-bottom-info {
 	margin-left: auto;
 	margin-right: auto;
-	width: 70%;
+	width: 35%;
 }
 
-#RecaptchaButton
-{
+#show-listing-commit {
 	margin-left: auto;
 	margin-right: auto;
-	padding-top: 20px;
-	padding-right:80px;
-	width: 27%;
+	width: 37%;
 }
 
 .flag_listing {
